<resources>
    <string name="app_name">RollaroundApp-Projekt</string>
    <string name="startGameButton">Start</string>
    <string name="startSettingsButton">Einstellungen</string>
    <string name="settingsColor">Farbe von Ball</string>
    <string name="settingsBackgroundcolor">Hintergrundfarbe</string>
    <string name="settingsBoxes">Anzahl Boxen</string>
    <string name="settingsBox1">Box 1</string>
    <string name="settingsBox2">Box 2</string>
    <string name="settingsBox3">Box 3</string>
    <string name="settingsBox4">Box 4</string>
    <string name="settingsMode">Darkmode</string>
    <string name="settingsColor1">Rot</string>
    <string name="settingsColor2">Blue</string>
    <string name="settingsColor3">Green</string>
    <string name="settingsColor4">Purple</string>

</resources>
